# real-time

./: .gitignore  README.md  TODO.md  acknowledgements.md  code.md  mkdocs.yml  overview.md  projects.md  pyproject.toml
.github/: linkcheck_config.json
figures/: Untitled Diagram.drawio
m0_introduction/: README.md  s0_intro_to_computing.md  s1_intro_to_rust.md  s2_basic_concepts_in_rust.md  s3_less_basic_concepts_in_rust.md  s4_exercises.md
m1_memory_hierarchies/: README.md  s0_intro.md  s0_memory_hierarchies_and_the_cpu.md  s0_soft_memory_hierarchies.md  s1_computational_graphs.md  s1_memory_hierarchies_and_the_cpu.md  s2_computational_graphs.md  (+13 more)
m1_memory_hierarchies/code/computational_graphs/: Cargo.toml
m1_memory_hierarchies/code/computational_graphs/src/: lib.rs  main.rs
m1_memory_hierarchies/code/computational_graphs/src/graph/: graph_runner.rs  graph_runner_gpu.rs  graph_runner_gpu_test.rs  graph_runner_tests.rs  graph_validation.rs  mod.rs  nodes.rs  nodes_gpu.rs  runner.rs
m1_memory_hierarchies/code/computational_graphs/src/immediate/: mod.rs  nodes.rs  nodes_test.rs  runner.rs
m1_memory_hierarchies/code/computational_graphs/src/op_code_compiler/: runner.rs
m1_memory_hierarchies/code/computational_graphs/src/shared/: benchmark_plot.rs  configuration.rs  gpu_utilities.rs  graph_operators.rs  mod.rs  performance_measurement.rs  tensor2d.rs  tensor2d_gpu.rs  tensor2d_test.rs
m1_memory_hierarchies/code/computational_graphs/src/shared/shaders/: linear_layer.wgsl  relu.wgsl  relu_inline.wgsl  softmax.wgsl  subtraction.wgsl  sum.wgsl
m1_memory_hierarchies/code/computational_graphs/src/stack/: runner.rs
m1_memory_hierarchies/code/image_on_screen/: Cargo.toml
m1_memory_hierarchies/code/image_on_screen/src/: main.rs
m2_concurrency/code/sphere_intersection/: Cargo.toml
m2_concurrency/code/sphere_intersection/src/: main.rs
(+185 files in other folders)
