[package]
name = "intro-hpml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "intro-hpml-app"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.16"
pollster = "0.3.0"
plotters = "0.3.4"
ordered-float = "3.7.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
futures-intrusive = "0.5.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"