[package]
name = "image_on_screen"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
rand = "0.8.5"
rand_chacha = "0.3.1"