[package]
name = "sphere_intersection"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C","target-cpu=native"]

[profile.dev]
opt-level = 3
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
incremental = true
codegen-units = 1

[dependencies]
ultraviolet = { version = "0.9", features = [ "f64", "int" ] }
rayon = "1.5.3"
wide = "0.7.5"